--- a/TODO
+++ b/TODO
@@ -1,1 +1,7 @@
  - Failed to load data Screen
+ - Show Question
+ - Mobile View
+ - Mobile Gameplay
+ - Home Page
+ - Show correct answer
+ - Placeholder Entfernen
